# amend

./: .gitignore  README.md  pyproject.toml
src/amend/: __init__.py
src/amend/built_in/: __init__.py
src/amend/built_in/mappings/: __init__.py  data_mappings.py
src/amend/built_in/numbers/: __init__.py  integers.py  real_numbers.py
src/amend/built_in/sequences/: __init__.py  data_sequences.py  sequence_containers.py
src/amend/built_in/sets/: __init__.py  data_sets.py
src/amend/standard/: __init__.py  paths.py  temporals.py
src/amend/testing/: __init__.py
src/amend/testing/unit/: __init__.py
src/amend/testing/unit/built_in/: __init__.py
src/amend/testing/unit/built_in/mappings/: __init__.py  test_data_mappings.py
src/amend/testing/unit/built_in/numbers/: __init__.py  test_integers.py  test_real_numbers.py
src/amend/testing/unit/built_in/sequences/: __init__.py  test_data_sequences.py
src/amend/testing/unit/built_in/sets/: __init__.py  test_data_sets.py
src/amend/testing/unit/standard/: __init__.py  test_paths.py  test_temporals.py
src/amend/testing/unit/utilities/: __init__.py  test_normalization.py
src/amend/utilities/: __init__.py  normalization.py
