[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "amend"
version = "0.2.0"
description = "Amend: Ensure your values are right"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Miljenko Šuflaj", email = "suflajmob@gmail.com" }]
maintainers = [{ name = "Miljenko Šuflaj", email = "suflajmob@gmail.com" }]
keywords = ["amend", "validation", "correction", "processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/suflaj/amend"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/suflaj/amend.git"
Issues = "https://github.com/suflaj/amend/issues"
